ajout + liste d'amis (front)

--- a/src/main/webapp/css/template/assets/css/mycss.css
+++ b/src/main/webapp/css/template/assets/css/mycss.css
@@ -6,3 +6,17 @@
     text-decoration-color: red;
 
 }
+
+.formFriend {
+
+    height: 40px;
+    text-align: center;
+    vertical-align: center;
+    horiz-align: center;
+
+}
+
+.center{
+    align-content: center;
+}
+
